# TARTANHACKS26

./: .env.example  .gitignore  COMMIT_MESSAGE.txt  Makefile  README.md  RUN.md  STATE.md  State.md  package-lock.json  state.md
backend/: Makefile  README.md  pyproject.toml  requirements.txt  state.md
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: caremap.py  chat.py  docs.py  llm.py  me.py  notes.py  policies.py  providers.py
backend/app/core/: config.py  contracts.py  logging.py  security.py  sse.py
backend/app/integrations/: __init__.py  benefits_adapter.py  bill_parser_adapter.py  network_adapter.py
backend/app/llm/: __init__.py  client.py
backend/app/models/: schemas.py
backend/app/schemas/: __init__.py  caremap.py
backend/app/services/chat/: chat_service.py
backend/app/services/db/: policies_repo.py  providers_repo.py  supabase_db.py
backend/app/services/docs/: analyzer.py  parser.py
backend/app/services/network/: heuristics.py  in_network.py
backend/scripts/: dev_bootstrap.sh  run_migrations.sh  seed_demo.py  smoke.sh
backend/supabase/migrations/: 0001_init.sql  0002_storage_buckets.sql
backend/supabase/seed/: dev_seed.sql
backend/tests/: conftest.py  test_auth_me.py  test_caremap_ingest.py  test_chat_contract.py  test_chat_stream.py  test_docs_contract.py  test_health.py  test_integration_smoke.py  test_llm_smoke.py  test_policies_contract.py  test_providers_contract.py  test_rls_isolation_chat.py  test_rls_isolation_docs.py  test_rls_isolation_policies.py  test_rls_isolation_providers_cache.py
(+137 files in other folders)
